# fastqr

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DISTRIBUTION.md  INSTALL.md  LICENSE  NOTICE  PREBUILT.md  README.md  build.sh  composer.json  fastqr.gemspec  phpunit.xml  test.sh  verify_batch_input.txt
.github/workflows/: build-binaries.yml  build-linux.yml  build-macos.yml  build.yml  publish-gem.yml  publish-npm.yml  release-coordinator.yml  release.yml  update-homebrew.yml
bindings/nodejs/: README.md  binding.gyp  fastqr_node.cpp  index.d.ts  index.js  package.json
bindings/nodejs/lib/: platform.js
bindings/nodejs/test/: test.js
bindings/php/: fastqr_php.cpp
bindings/php/src/: FastQR.php
bindings/php/tests/: FastQRTest.php
bindings/ruby/: extconf.rb  fastqr_ruby.cpp
bindings/ruby/lib/: fastqr.rb
bindings/ruby/lib/fastqr/: platform.rb  version.rb
cmake/: fastqrConfig.cmake.in
docs/: CLI_USAGE.md  NODEJS_USAGE.md  PHP_USAGE.md  README.md  RUBY_USAGE.md
examples/: CMakeLists.txt  basic.cpp
include/: fastqr.h
prebuilt/: README.md
scripts/: README.md  build-binaries.sh  build-local.sh  install.sh  release.sh  test-gem-local.sh  test-gem-manual.rb  test-npm-local.sh  test-npm-real.sh  update-version.sh
src/: cli.cpp  fastqr.cpp
